--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <h3>What makes our coffe speial</h3>
+            <h3>What Makes Our Coffee Speial</h3>
             <p>
               My coffee stands out because it's not just a drink, but a
               carefully crafted experience. We source only the highest quality
