--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="menu.html">Menu</a>
+            <a class="nav-link" href="#menu">Menu</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#product">Product</a>
@@ -78,7 +78,7 @@
             <a class="nav-link" href="#gallary">Gallary</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#blogs">Blogs</a>
@@ -92,15 +92,9 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
-<<<<<<< HEAD
     </div>
   </nav>
   <!-- navbar -->
-=======
-
-  </head>
- 
->>>>>>> 921b4e646ff2bd364a4d4f71348a04d91faf3fbd
 
 <!-- home section -->
    <section id="home">
@@ -115,6 +109,10 @@
    </section>
 
 <!-- home section -->
+
+
+
+
 
 
    <a href="#" class="arrow"><i><img src="./images/up-arrow.png" alt="" width="50px"></i></a>
