--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a class="nav-link" href="#product">Product</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#gallary">Gallary</a>
+            <a class="nav-link" href="gallery.html">Gallary</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
