--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <a class="nav-link" href="menu.html">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#product">Product</a>
+            <a class="nav-link" href="#product.html">Product</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="gallery.html">Gallary</a>
