--- a/Product.html
+++ b/Product.html
@@ -30,7 +30,7 @@
                 <div class="col-md-3 py-3 py-md-0">
                     <div class="card">
                         <img src="https://media.istockphoto.com/id/533974694/photo/composition-with-cup-of-costa-coffee-coffee-and-beans.jpg?s=612x612&w=0&k=20&c=Ex9qb54E8KSwBu1t3RQXOd11aqtFzndv0TupHnHXm1Y=" alt="">
-                        <div class="card-body">
+                        <div class="cards-body">
                             <h3>Costa Coffee</h3>
                             <p>$250 <strike>$350</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
 
