--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,9 @@
     <!-- menu -->
 <section class="menu" id="menu">
   <div class="container">
-  <div class="heading3">Coffee Menu</div>
+  <div class="heading3">Coffee Menu
+    <i class="fa-solid fa-mug-saucer"></i>
+  </div>
 </div>
   <div class="container" id="container2">
   <div class="row">
