--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <style>
   body {
-    background-image: url('coffee.jpg'); /* Make sure the path is correct */
+    background-image: url('coffee.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -31,7 +31,7 @@
   #home {
     padding: 100px 20px;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.5); /* Optional dark overlay for better text visibility */
+    background-color: rgba(0, 0, 0, 0.5); 
   }
 
   #home h3, #home p {
