--- a/Product.html
+++ b/Product.html
@@ -11,7 +11,7 @@
     
     <section id="product" class="product">
         <div class="container">
-            <div class="heading4">Products</div>
+            <h1>Products</h1>
         </div>
         <div class="container" id="container3">
 
