--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="content">
       <h3>Start Your Day With a <br> Fresh Coffee</h3>
      
-      <button id="btn">Shop Now</button>
+      <a href="menu.html" id="btn">Shop Now</a>
     </div>
    </section>
 
