--- a/contact.html
+++ b/contact.html
@@ -2,184 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Coffee Shop - Contact</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet" />
-
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f8f9fa; /* Light gray background */
-      color: #212529; /* Bootstrap default text color */
-      min-height: 100vh;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav#navbar {
-      background-color: #343a40; /* Dark navbar */
-    }
-
-    nav#navbar .navbar-brand img {
-      height: 40px;
-    }
-
-    nav#navbar .nav-link {
-      color: rgba(255, 255, 255, 0.85);
-    }
-
-    nav#navbar .nav-link.active,
-    nav#navbar .nav-link:hover {
-      color: #f4a261; /* Highlight color */
-    }
-
-    #contact {
-      padding: 80px 15px;
-      max-width: 900px;
-      margin: 0 auto;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgb(0 0 0 / 0.1);
-    }
-
-    #contact h2 {
-      margin-bottom: 30px;
-      font-weight: 700;
-      color: #a0522d; /* Coffee brown */
-    }
-
-    .btn-send {
-      background-color: #a0522d;
-      border: none;
-      color: white;
-      padding: 10px 25px;
-      font-weight: 600;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-      cursor: pointer;
-    }
-
-    .btn-send:hover {
-      background-color: #8b4513;
-    }
-
-    .contact-info i {
-      color: #a0522d;
-      margin-right: 10px;
-    }
-
-    @media (max-width: 767px) {
-      #contact .row > div {
-        margin-bottom: 30px;
-      }
-    }
-  </style>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="contact.css" />
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg sticky-top" id="navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#" id="logo"><img src="./images/logo.png" alt="Logo"></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span><i class="fa-solid fa-bars" style="color: white; font-size: 23px;"></i></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" href="Product.html">Progiduct</a></li>
-          <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-          <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">Blogs</a></li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+  <section class="contact py-5" id="contact">
+    <div class="container">
+      <div class="row">
+        <!-- Contact Form -->
+        <div class="col-md-7 mb-4">
+          <h2 class="mb-3">Contact <span class="custom-highlight">Us</span></h2>
+          <p>If you have any questions about our menu, services, or bookings,
+             feel free to reach out using the form below. We'd love to hear from you!</p>
 
-  <!-- Contact Section -->
-  <section id="contact" class="container mt-5 mb-5">
-    <div class="row">
-      <!-- Contact Form -->
-      <div class="col-md-7">
-        <h2>Contact <span style="color:#a0522d;">Us</span></h2>
-        <p>If you have any questions about our menu, services, or bookings, feel free to reach out using the form below. We'd love to hear from you!</p>
-        <form action="#" method="POST" autocomplete="off">
-          <div class="mb-3">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Name"
-              name="name"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <input
-              type="email"
-              class="form-control"
-              placeholder="Email"
-              name="email"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <input
-              type="tel"
-              class="form-control"
-              placeholder="Phone Number"
-              name="phone"
-              required
-            />
-          </div>
-          <button type="submit" class="btn-send">Send Message</button>
-        </form>
-      </div>
+          <!-- Add form tag if you want to submit somewhere -->
+          <form action="#" method="POST">
+            <div class="mb-3">
+              <input class="form-control" type="text" placeholder="Name" name="name" required>
+            </div>
+            <div class="mb-3">
+              <input class="form-control" type="email" placeholder="Email" name="email" required>
+            </div>
+            <div class="mb-3">
+              <input class="form-control" type="tel" placeholder="Number" name="number" required>
+            </div>
+            <button type="submit" class="btn custom-btn">Send Message</button>
 
-      <!-- Contact Info -->
-      <div class="col-md-5 contact-info">
-        <h2>Info</h2>
-        <p><i class="fa-regular fa-envelope"></i> Seemacofee@gmail.com</p>
-        <p><i class="fa-solid fa-phone"></i> +91 9876543210</p>
-        <p><i class="fa-solid fa-building-columns"></i> Yelahanka, Bangalore</p>
-        <p>
-          We are open every day from 8:00 AM to 10:00 PM. Visit us for fresh coffee, delicious snacks, and a cozy atmosphere.
-        </p>
+          </form>
+        </div>
+
+        <!-- Contact Info -->
+        <div class="col-md-5" id="col">
+          <h2>Info</h2>
+          <p><i class="fa-regular fa-envelope me-2"></i> Seemacofee@gmail.com</p>
+          <p><i class="fa-solid fa-phone me-2"></i> +91 9876543210</p>
+          <p><i class="fa-solid fa-building-columns me-2"></i> Yelahanka, Bangalore</p>
+          <p>We are open every day from 8:00 AM to 10:00 PM. Visit us for fresh coffee, delicious snacks, and a cozy atmosphere.</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Bootstrap Bundle JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <!-- Bootstrap JS (optional, not needed unless you use dropdowns/modals) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
