--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="contact.css" />
+      <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <nav class="navbar navbar-expand-lg" id="navbar">
