--- a/blog.html
+++ b/blog.html
@@ -99,7 +99,7 @@
       <i class="fa-brands fa-pinterest-p"></i>
     </div>
     <div class="credite text-center">
-        Designed By <a href="#"> SA Coding</a>
+        Designed By <a href="#"> Bug_Hunters</a>
     </div>
     <div class="copyright text-center">
       &copy; Copyright <strong><span>Coffee Shop</span></strong>. All Rights Reserved
