--- a/blog.html
+++ b/blog.html
@@ -92,11 +92,12 @@
 <footer id="footer">
     <div class="footer-logo text-center"><img src="./images/logo.png" alt=""></div>
     <div class="socail-links text-center">
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-facebook-f"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-youtube"></i>
-      <i class="fa-brands fa-pinterest-p"></i>
+      <a href="https://x.com/?lang=en-in" ><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://www.facebook.com/"><i  class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/accounts/login/" ><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.youtube.com/" ><i class="fa-brands fa-youtube"></i></a>
+      <a href="https://in.pinterest.com/login/" ><i class="fa-brands fa-pinterest-p"></i></a>
+      
     </div>
     <div class="credite text-center">
         Designed By <a href="#"> Bug_Hunters</a>
