--- a/contact.html
+++ b/contact.html
@@ -78,18 +78,26 @@
               <input class="form-control" type="tel" placeholder="Number" name="number" required>
             </div>
             <button type="submit" class="btn custom-btn">Send Message</button>
+            
 
           </form>
         </div>
 
-        <!-- Contact Info -->
-        <div class="col-md-5" id="col">
-          <h2>Info</h2>
-          <p><i class="fa-regular fa-envelope me-2"></i> Seemacofee@gmail.com</p>
-          <p><i class="fa-solid fa-phone me-2"></i> +91 9876543210</p>
-          <p><i class="fa-solid fa-building-columns me-2"></i> Yelahanka, Bangalore</p>
-          <p>We are open every day from 8:00 AM to 10:00 PM. Visit us for fresh coffee, delicious snacks, and a cozy atmosphere.</p>
-        </div>
+  <form action="form.html" method="POST">
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_template" value="box">
+  <div class="mb-3">
+    <input class="form-control" type="text" placeholder="Name" name="name" required>
+  </div>
+  <div class="mb-3">
+    <input class="form-control" type="email" placeholder="Email" name="email" required>
+  </div>
+  <div class="mb-3">
+    <input class="form-control" type="tel" placeholder="Number" name="number" required>
+  </div>
+  <button type="submit" class="btn custom-btn">Send Message</button>
+</form>
+
       </div>
     </div>
   </section>
