--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  
+
  <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,43 +67,41 @@
           <p>If you have any questions about our menu, services, or bookings,
              feel free to reach out using the form below. We'd love to hear from you!</p>
 
-          <!-- Add form tag if you want to submit somewhere -->
-          <form action="#" method="POST">
-            <div class="mb-3">
-              <input class="form-control" type="text" placeholder="Name" name="name" required>
-            </div>
-            <div class="mb-3">
-              <input class="form-control" type="email" placeholder="Email" name="email" required>
-            </div>
-            <div class="mb-3">
-              <input class="form-control" type="tel" placeholder="Number" name="number" required>
-            </div>
-            <button type="submit" class="btn custom-btn">Send Message</button>
-            
-
-          </form>
+```
+      <!-- Add form tag if you want to submit somewhere -->
+      <form action="#" method="POST">
+        <div class="mb-3">
+          <input class="form-control" type="text" placeholder="Name" name="name" required>
         </div>
+        <div class="mb-3">
+          <input class="form-control" type="email" placeholder="Email" name="email" required>
+        </div>
+        <div class="mb-3">
+          <input class="form-control" type="tel" placeholder="Number" name="number" required>
+        </div>
+        <button type="submit" class="btn custom-btn">Send Message</button>
+        
 
-  <form action="form.html" method="POST">
-  <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_template" value="box">
-  <div class="mb-3">
-    <input class="form-control" type="text" placeholder="Name" name="name" required>
-  </div>
-  <div class="mb-3">
-    <input class="form-control" type="email" placeholder="Email" name="email" required>
-  </div>
-  <div class="mb-3">
-    <input class="form-control" type="tel" placeholder="Number" name="number" required>
-  </div>
-  <button type="submit" class="btn custom-btn">Send Message</button>
-</form>
-
-      </div>
+      </form>
     </div>
+
+    <!-- Contact Info -->
+    <div class="col-md-5" id="col">
+      <h2>Info</h2>
+      <p><i class="fa-regular fa-envelope me-2"></i> Seemacofee@gmail.com</p>
+      <p><i class="fa-solid fa-phone me-2"></i> +91 9876543210</p>
+      <p><i class="fa-solid fa-building-columns me-2"></i> Yelahanka, Bangalore</p>
+      <p>We are open every day from 8:00 AM to 10:00 PM. Visit us for fresh coffee, delicious snacks, and a cozy atmosphere.</p>
+    </div>
+  </div>
+</div>
+
+
   </section>
 
   <!-- Bootstrap JS (optional, not needed unless you use dropdowns/modals) -->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+
+</body> 
 </html>
