--- a/contact.html
+++ b/contact.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
 
- <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact us</title>
-    <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <!-- bootstrap links -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- bootstrap links -->
-    <!-- fonts links -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact us</title>
+  <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <!-- bootstrap links -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- bootstrap links -->
+  <!-- fonts links -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" id="logo"><img src="./images/logo.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span><i class="fa-solid fa-bars" style="color: white; font-size: 23px;"></i></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -48,7 +52,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="blog.html">Blogs</a>
-          </li> 
+          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -65,36 +69,36 @@
         <div class="col-md-7 mb-4">
           <h2 class="mb-3">Contact <span class="custom-highlight">Us</span></h2>
           <p>If you have any questions about our menu, services, or bookings,
-             feel free to reach out using the form below. We'd love to hear from you!</p>
+            feel free to reach out using the form below. We'd love to hear from you!</p>
 
-```
-      <!-- Add form tag if you want to submit somewhere -->
-      <form action="#" method="POST">
-        <div class="mb-3">
-          <input class="form-control" type="text" placeholder="Name" name="name" required>
-        </div>
-        <div class="mb-3">
-          <input class="form-control" type="email" placeholder="Email" name="email" required>
-        </div>
-        <div class="mb-3">
-          <input class="form-control" type="tel" placeholder="Number" name="number" required>
-        </div>
-        <button type="submit" class="btn custom-btn">Send Message</button>
-        
-
-      </form>
-    </div>
-
-    <!-- Contact Info -->
-    <div class="col-md-5" id="col">
-      <h2>Info</h2>
-      <p><i class="fa-regular fa-envelope me-2"></i> Seemacofee@gmail.com</p>
-      <p><i class="fa-solid fa-phone me-2"></i> +91 9876543210</p>
-      <p><i class="fa-solid fa-building-columns me-2"></i> Yelahanka, Bangalore</p>
-      <p>We are open every day from 8:00 AM to 10:00 PM. Visit us for fresh coffee, delicious snacks, and a cozy atmosphere.</p>
-    </div>
+          <form action="form.html" method="GET">
+  <div class="mb-3">
+    <input class="form-control" type="text" placeholder="Name" name="name" required>
   </div>
-</div>
+  <div class="mb-3">
+    <input class="form-control" type="email" placeholder="Email" name="email" required>
+  </div>
+  <div class="mb-3">
+    <input class="form-control" type="tel" placeholder="Number" name="number" required>
+  </div>
+  <button type="submit" class="btn custom-btn">Send Message</button>
+</form>
+
+
+
+        </div>
+
+        <!-- Contact Info -->
+        <div class="col-md-5" id="col">
+          <h2>Info</h2>
+          <p><i class="fa-regular fa-envelope me-2"></i> Seemacofee@gmail.com</p>
+          <p><i class="fa-solid fa-phone me-2"></i> +91 9876543210</p>
+          <p><i class="fa-solid fa-building-columns me-2"></i> Yelahanka, Bangalore</p>
+          <p>We are open every day from 8:00 AM to 10:00 PM. Visit us for fresh coffee, delicious snacks, and a cozy
+            atmosphere.</p>
+        </div>
+      </div>
+    </div>
 
 
   </section>
@@ -103,5 +107,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-</body> 
+</body>
+
 </html>
