--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,7 @@
 <section class="menu" id="menu">
   <div class="container">
   <div class="heading3">Coffee Menu
-    <i class="fa-solid fa-mug-saucer"></i>
+    <i class="fa-solid fa-mug-saucer mug-icon"></i>
   </div>
 </div>
   <div class="container" id="container2">
@@ -64,11 +64,12 @@
         <img src="https://media.istockphoto.com/id/543217434/photo/drowned.webp?a=1&b=1&s=612x612&w=0&k=20&c=Zl5MfZ1UC-z_MThPKuF2QaPkBr609-M4XfFrY_4p7GQ=" alt="">
         <div class="card-body">
           <div class="star text-center">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-heart"></i>
+             <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart"></i>
+               <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
+
           </div>
           <h3>Affogato</h3>
           <p>$99 <strike>$100</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
@@ -80,11 +81,11 @@
         <img src="https://media.istockphoto.com/id/1442009345/photo/mocha-with-latte-art-served-in-a-cup-isolated-on-dark-grey-background-top-view-of-hot-coffee.webp?a=1&b=1&s=612x612&w=0&k=20&c=q4EduNnhYeDXxASsPnNPrP_YkTKkEi5FRXthrZkJmVE=" alt="">
         <div class="card-body">
           <div class="star text-center">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-heart"></i>
+             <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart"></i>
+               <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Macchiato </h3>
           <p>$90 <strike>$110</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
@@ -96,11 +97,12 @@
         <img src="https://media.istockphoto.com/id/1126871442/photo/coffee-cup.webp?a=1&b=1&s=612x612&w=0&k=20&c=UAO6jxvBYe-ATZoz7KLgQRUA1zDK5Ug3VMrkU-tzkq0=" alt="">
         <div class="card-body">
           <div class="star text-center">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            
+             <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart"></i>
+               <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
+                 <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Espresso</h3>
           <p>$100 <strike>$200</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
@@ -112,11 +114,11 @@
         <img src="https://images.unsplash.com/photo-1574359172160-c7ae4fadcacc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHBvdXIlMjBvdmVyfGVufDB8fDB8fHww" alt="">
         <div class="card-body">
           <div class="star text-center">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+             <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart"></i>
+               <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
+                 <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Pour Over</h3>
           <p>$120 <strike>$150</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
@@ -131,11 +133,11 @@
         <img src="https://media.istockphoto.com/id/1144838255/photo/barista-pours-milk-into-cold-brew-coffee.webp?a=1&b=1&s=612x612&w=0&k=20&c=hL4O3VFetaQGPsO0o1181mJht_eTj4LmU2BvK3h9ZJA=" alt="">
         <div class="card-body">
           <div class="star text-center">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-heart"></i>
+             <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart"></i>
+               <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Cold Brew</h3>
           <p>$200 <strike>$300</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
@@ -147,11 +149,11 @@
         <img src="https://media.istockphoto.com/id/2198108247/photo/top-view-of-coffee-in-a-glass-cup-prepared-with-aeropress.webp?a=1&b=1&s=612x612&w=0&k=20&c=gB8w3EOy_mno8Kzsn1mS_Fby-sl0H_jE6_vN2o9h0M0=" alt="">
         <div class="card-body">
           <div class="star text-center">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-heart"></i>
+             <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart"></i>
+               <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
           </div>
           <h3>AeroPress</h3>
           <p>$30 <strike>$50</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
@@ -163,11 +165,11 @@
         <img src="https://media.istockphoto.com/id/1148605793/photo/moka-pot-with-coffee-and-cup.jpg?s=612x612&w=0&k=20&c=Ewgk7X4hxSJJV7GxFg-4VyO2Dwg4NqWfDfBGGHTBNfo=" alt="">
         <div class="card-body">
           <div class="star text-center">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+             <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart"></i>
+               <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
+                 <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Moka Pot</h3>
           <p>$100 <strike>$200</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
@@ -179,11 +181,11 @@
         <img src="https://media.istockphoto.com/id/493685876/photo/hot-coffee-from-a-french-press.webp?a=1&b=1&s=612x612&w=0&k=20&c=GW45v5TB7az0mQ8v3steBoIKK8Fyy556hRn6K2rXss0=" alt="">
         <div class="card-body">
           <div class="star text-center">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+             <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart"></i>
+               <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
+                 <i class="fa-regular fa-heart"></i>
           </div>
           <h3>French Press</h3>
           <p>$120 <strike>$150</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
