--- a/readmore1.html
+++ b/readmore1.html
@@ -7,21 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
-    <p>Coffee shops have always been more than just places to grab a quick caffeine fix. They are vibrant hubs where conversations flow, ideas spark, and connections flourish. Whether it's the local indie shop or a bustling city café, these cozy corners have a special way of bringing people together.
+    <h1>Community Spotlight:</h1>
+    <img
+          src="https://images.unsplash.com/photo-1734861474848-562d53e031c6?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fENvbW11bml0eSUyMFNwb3RsaWdodCUzQSUyMGluJTIwY29mZmVlJTIwc2hvcHxlbnwwfHwwfHx8MA%3D%3D"
+           class="img-fluid rounded"
+        />
+    <p>Coffee shops have always been more than just places to grab a quick caffeine fix. They are vibrant hubs where conversations flow, ideas spark, and connections flourish. Whether it's the local indie shop or a bustling city café, these cozy corners have a special way of bringing people together.<br>
 
-Meet the Community
-From baristas perfecting latte art to remote workers typing away, each coffee shop is a microcosm of creativity, ambition, and connection. Artists sketch their next masterpiece, students cram for finals, and entrepreneurs craft the next big startup – all over a steaming cup of their favorite brew.
+<p>Meet the Community<br>
+From baristas perfecting latte art to remote workers typing away, each coffee shop is a microcosm of creativity, ambition, and connection. Artists sketch their next masterpiece, students cram for finals, and entrepreneurs craft the next big startup – all over a steaming cup of their favorite brew.</p>
 
-Why We Love It
+<p>Why We Love It<br>
 
-Connection: Coffee shops are natural networking spaces.
+Connection: Coffee shops are natural networking spaces.<br>
 
-Inspiration: The energy of people around can fuel creativity.
+Inspiration: The energy of people around can fuel creativity.<br>
 
-Comfort: It’s a place where strangers can feel like friends.
+Comfort: It’s a place where strangers can feel like friends.</p>
 
-Your Coffee Shop Stories
-Do you have a favorite coffee shop or a memorable café moment? Share your stories with us!</p>
+<p>Your Coffee Shop Stories<br>
+Do you have a favorite coffee shop or a memorable café moment? Share your stories with us!</p></p>
 </body>
 </html>
