--- a/home.html
+++ b/home.html
@@ -99,6 +99,7 @@
    <section id="home">
     
     <div class="content">
+      <h1>WELCOME TO SEEMA COFFEE</h1>
       <h3>Start Your Day With a <br> Fresh Coffee</h3>
      
       <a href="menu.html" id="btn">Shop Now</a>
