--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@
       <h3>Brewing Sustainability:<br>How Our Café Supports Ethical Coffee Farming</h3>
       <h5>Admin / 6 March 2020</h5>
       <p>Share your commitment to sustainability...</p>
-      <button id="blogbtn">Read More.</button>
+      <a href="readmore2.html"><button id="blogbtn">Read More.</button></a>
     </div>
   </div>
 
