--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     
       <h3>Start Your Day With a <br> Fresh Coffee</h3>
      
-      <a href="menu.html" id="btn">Shop Now</a>
+      <a href="menu.html" id="btn">Order Now</a>
     </div>
    </section>
 
