--- a/menu.html
+++ b/menu.html
@@ -72,7 +72,7 @@
 
           </div>
           <h3>Affogato</h3>
-          <p>$99 <strike>$100</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          <p>99/- <strike>100/-</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
         </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
                 <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Macchiato </h3>
-          <p>$90 <strike>$110</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          <p>90/- <strike>110/-</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
                  <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Espresso</h3>
-          <p>$100 <strike>$200</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          <p>100/- <strike>200/-</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
         </div>
       </div>
     </div>
@@ -121,7 +121,7 @@
                  <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Pour Over</h3>
-          <p>$120 <strike>$150</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          <p>120/- <strike>150/-</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
         </div>
       </div>
     </div>
@@ -140,7 +140,7 @@
                 <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Cold Brew</h3>
-          <p>$200 <strike>$300</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          <p>200/- <strike>300/-</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
         </div>
       </div>
     </div>
@@ -156,7 +156,7 @@
                 <i class="fa-regular fa-heart"></i>
           </div>
           <h3>AeroPress</h3>
-          <p>$30 <strike>$50</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          <p>130/- <strike>150/-</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
         </div>
       </div>
     </div>
@@ -172,7 +172,7 @@
                  <i class="fa-regular fa-heart"></i>
           </div>
           <h3>Moka Pot</h3>
-          <p>$100 <strike>$200</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          <p>100/- <strike>200/-</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
         </div>
       </div>
     </div>
@@ -188,7 +188,7 @@
                  <i class="fa-regular fa-heart"></i>
           </div>
           <h3>French Press</h3>
-          <p>$120 <strike>$150</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          <p>120/- <strike>150/-</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
         </div>
       </div>
     </div>
