--- a/Learn.html
+++ b/Learn.html
@@ -14,6 +14,12 @@
   </head>
 
   <body>
+    <style>
+      body{
+        background-color: rgba(239, 206, 127, 0.904);
+      }
+
+    </style>
 
     <div class="container my-5">
       <h1 class="mb-4 text-center">Coffee Bean</h1>
