--- a/readmore2.html
+++ b/readmore2.html
@@ -12,6 +12,14 @@
       background-color: #fdfdfd;
       color: #333;
     }
+       .blog-container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
     h1 {
       color: #5c3d1f;
     }
@@ -32,7 +40,7 @@
   </style>
 </head>
 <body>
-
+<div class="blog-container">
   <img class="header-image" src="https://images.unsplash.com/photo-1707555427189-6021dae87a5c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fEJyZXdpbmclMjBTdXN0YWluYWJpbGl0eSUzQSUyMGluJTIwY29mZmVlJTIwc2hvcHxlbnwwfHwwfHx8MA%3D%3D" alt="Brewing Sustainability in a Coffee Shop">
 
   <h1>Brewing Sustainability in a Coffee Shop</h1>
@@ -79,6 +87,7 @@
     <li><strong>Sustainable Growth:</strong> Expanding responsibly without compromising values.</li>
     <li><strong>Transparency:</strong> Sharing sustainability goals and progress with customers.</li>
   </ul>
+  </div>
 
 </body>
 </html>
