--- a/readmore1.html
+++ b/readmore1.html
@@ -1,31 +1,70 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Community Spotlight</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f9f9f9;
+      padding: 20px;
+    }
+    .blog-container {
+      max-width: 800px;
+      margin: auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      color: #5a3e36;
+      margin-bottom: 20px;
+    }
+    img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    p {
+      margin-bottom: 15px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Community Spotlight:</h1>
+
+  <div class="blog-container">
+    <h1>Community Spotlight: Open Mic Nights at Our Café</h1>
     <img
-          src="https://images.unsplash.com/photo-1734861474848-562d53e031c6?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fENvbW11bml0eSUyMFNwb3RsaWdodCUzQSUyMGluJTIwY29mZmVlJTIwc2hvcHxlbnwwfHwwfHx8MA%3D%3D"
-           class="img-fluid rounded"
-        />
-    <p>Coffee shops have always been more than just places to grab a quick caffeine fix. They are vibrant hubs where conversations flow, ideas spark, and connections flourish. Whether it's the local indie shop or a bustling city café, these cozy corners have a special way of bringing people together.<br>
+      src="https://images.unsplash.com/photo-1734861474848-562d53e031c6?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fENvbW11bml0eSUyMFNwb3RsaWdodCUzQSUyMGluJTIwY29mZmVlJTIwc2hvcHxlbnwwfHwwfHx8MA%3D%3D"
+      alt="Community Spotlight"
+      class="img-fluid rounded"
+    />
 
-<p>Meet the Community<br>
-From baristas perfecting latte art to remote workers typing away, each coffee shop is a microcosm of creativity, ambition, and connection. Artists sketch their next masterpiece, students cram for finals, and entrepreneurs craft the next big startup – all over a steaming cup of their favorite brew.</p>
+    <p>
+      Coffee shops have always been more than just places to grab a quick caffeine fix. They are vibrant hubs where conversations flow, ideas spark, and connections flourish. Whether it's the local indie shop or a bustling city café, these cozy corners have a special way of bringing people together.
+    </p>
 
-<p>Why We Love It<br>
+    <h4>Meet the Community</h4>
+    <p>
+      From baristas perfecting latte art to remote workers typing away, each coffee shop is a microcosm of creativity, ambition, and connection. Artists sketch their next masterpiece, students cram for finals, and entrepreneurs craft the next big startup – all over a steaming cup of their favorite brew.
+    </p>
 
-Connection: Coffee shops are natural networking spaces.<br>
+    <h4>Why We Love It</h4>
+    <ul>
+      <li><strong>Connection:</strong> Coffee shops are natural networking spaces.</li>
+      <li><strong>Inspiration:</strong> The energy of people around can fuel creativity.</li>
+      <li><strong>Comfort:</strong> It’s a place where strangers can feel like friends.</li>
+    </ul>
 
-Inspiration: The energy of people around can fuel creativity.<br>
+    <h4>Your Coffee Shop Stories</h4>
+    <p>
+      Do you have a favorite coffee shop or a memorable café moment? Share your stories with us!
+    </p>
+  </div>
 
-Comfort: It’s a place where strangers can feel like friends.</p>
-
-<p>Your Coffee Shop Stories<br>
-Do you have a favorite coffee shop or a memorable café moment? Share your stories with us!</p></p>
 </body>
 </html>
