--- a/readmore3.html
+++ b/readmore3.html
@@ -38,7 +38,7 @@
 <body>
 
   <div class="blog-container">
-    <img src="https://images.unsplash.com/photo-1707555427189-6021dae87a5c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fEJyZXdpbmclMjBTdXN0YWluYWJpbGl0eSUzQSUyMGluJTIwY29mZmVlJTIwc2hvcHxlbnwwfHwwfHx8MA%3D%3D" alt="Mindful Mornings Coffee" />
+    <img src="https://plus.unsplash.com/premium_photo-1723798804239-80b6cb9bf7df?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8TWluZGZ1bCUyME1vcm5pbmdzJTNBJTIwaW4lMjBjb2ZmZWUlMjBzaG9wfGVufDB8fDB8fHww" />
 
     <h1>Mindful Mornings: Combining Coffee and Wellness</h1>
 
