--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 <body>
   <style>
 
-body {
-  margin-left: 220px; /* same as sidebar width */
-  background-image: url('coffee.jpg');
-  background-size: cover;
-  background-position: center;
-  color: white;
-  font-family: 'Roboto', sans-serif;
-}
+  body {
+    background-image: url('coffee.jpg'); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+  }
 
   #home {
     padding: 100px 20px;
