--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
     
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg" id="navbar">
+  <!-- <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" id="logo"><img src="./images/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
         </form>
       </div>
     </div>
-  </nav>
+  </nav> -->
     
 <!-- our gallary -->
 <div class="container" id="gallary">
