--- a/index.html
+++ b/index.html
@@ -54,58 +54,58 @@
   }
 </style>
 
-  <!-- navbar -->
-  <nav class="navbar navbar-expand-lg" id="navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#" id="logo"><img src="./images/logo.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span><i class="fa-solid fa-bars" style="color: white; font-size: 23px;"></i></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" href="home.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="menu.html">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Product.html">Product</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallary</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blogs</a>
-          </li> 
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+     <!-- Sidebar -->
+  <div class="sidebar">
+    <!-- Logo Section -->
+    <div class="logo-section">
+      <img src="images/coffee-logo.jpg" alt="Logo">
+      <h2>Seema Coffee</h2>
     </div>
-  </nav>
-  <!-- navbar -->
 
-<!-- home section -->
-   <section id="home">
-    
-    <div class="content">
-      <h1>WELCOME TO SEEMA COFFEE</h1>
-      <h3>Start Your Day With a <br> Fresh Coffee</h3>
-     
-      <a href="menu.html" id="btn">Order Now</a>
-    </div>
-   </section>
+    <!-- Navigation Links -->
+    <a href="index.html" class="nav-item active">
+      <i class="fa-solid fa-house-user"></i>
+      <span>Home</span>
+    </a>
 
-<!-- home section -->
+
+    <a href="about.html" class="nav-item">
+      <i class="fa-solid fa-user"></i>
+      <span>About</span>
+    </a>
+
+    <a href="menu.html" class="nav-item">
+      <i class="fa-solid fa-mug-hot"></i>
+      <span>Menu</span>
+    </a>
+
+    <a href="product.html" class="nav-item">
+      <i class="fa-solid fa-box"></i>
+      <span>Product</span>
+    </a>
+
+    <a href="gallery.html" class="nav-item">
+      <i class="fa-solid fa-image"></i>
+      <span>Gallery</span>
+    </a>
+
+    <a href="contact.html" class="nav-item">
+      <i class="fa-solid fa-phone"></i>
+      <span>Contact</span>
+    </a>
+
+    <a href="blog.html" class="nav-item">
+      <i class="fa-solid fa-pen-nib"></i>
+      <span>Blogs</span>
+    </a>
+  </div>
+
+  <!-- Main Content Area -->
+  <div class="main-content">
+    <h1>WELCOME TO SEEMA COFFEE</h1>
+    <h2>Start Your Day With a Fresh Coffee</h2>
+    <a href="#" class="btn">Order Now</a>
+  </div>
 
 
 
