--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
     <!-- bootstrap links -->
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" id="navbar">
+    <!-- <nav class="navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" id="logo"
           ><img src="./images/logo.png" alt=""
@@ -112,7 +112,7 @@
           </form>
         </div>
       </div>
-    </nav>
+    </nav> -->
     <div class="about" id="about">
       <div class="container">
         <div class="heading">About<span>Us</span></div>
