--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg" id="navbar">
+  <!-- <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" id="logo"><img src="./images/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -60,7 +60,7 @@
         </form>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
   <section class="contact py-5" id="contact">
     <div class="container">
