--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
 </style>
 
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg" id="navbar">
+  <!-- <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" id="logo"><img src="./images/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -92,7 +92,7 @@
         </form>
       </div>
     </div>
-  </nav>
+  </nav> -->
   <!-- navbar -->
 
 <!-- home section -->
