--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
   ]
 </head>
 <body>
-   <nav class="navbar navbar-expand-lg" id="navbar">
+   <!-- <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" id="logo"><img src="./images/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
         </form>
       </div>
     </div>
-  </nav>
+  </nav> -->
     <!-- menu -->
      
 <section class="menu" id="menu">
