--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="sidebar">
     <!-- Logo Section -->
     <div class="logo-section">
-      <img src="images/coffee-logo.jpg" alt="Logo">
+      <img src="https://images.pexels.com/photos/434213/pexels-photo-434213.jpeg?cs=srgb&dl=aroma-aromatic-art-434213.jpg&fm=jpg" alt="Logo">
       <h2>Seema Coffee</h2>
     </div>
 
