--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div class="main-content">
     <h1>WELCOME TO SEEMA COFFEE</h1>
     <h2>Start Your Day With a Fresh Coffee</h2>
-    <a href="#" class="btn">Order Now</a>
+    <a href="menu.html" class="btn">Order Now</a>
   </div>
 
 
