--- a/Product.html
+++ b/Product.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-      <nav class="navbar navbar-expand-lg" id="navbar">
+      <!-- <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" id="logo"><img src="./images/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
         </form>
       </div>
     </div>
-  </nav>
+  </nav> -->
     <section id="product" class="product">
         <div class="container">
             <h1>Products</h1>
